--- a/css/style-portfolio.css
+++ b/css/style-portfolio.css
@@ -3,11 +3,36 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300|Alegreya|Londrina+Sketch');
 
 html, body {
+background-color: #fff;
 height: 100%;
 width: 100%;
 margin: 0;
 padding: 0;
+animation: fadein 1s;
+-moz-animation: fadein 1s; /* Firefox */
+-webkit-animation: fadein 1s; /* Safari and Chrome */
+-o-animation: fadein 1s; /* Opera */
 }
+
+}
+.animate-in {
+    -webkit-animation: fadeIn .5s ease-in;
+    animation: fadeIn .5s ease-in;
+}
+.animate-out {
+    -webkit-transition: opacity .5s;
+    transition: opacity .5s;
+    opacity: 0;
+}
+@-webkit-keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
 
 .text-center {
 text-align: center;
@@ -28,7 +53,6 @@ position: relative;
 #background-img {
   background: url('https://static.wixstatic.com/media/2465a22a212e41cd96a05e3e3fe5adc4.jpg/v1/fill/w_1919,h_925,al_c,q_85,usm_0.66_1.00_0.01/2465a22a212e41cd96a05e3e3fe5adc4.webp') no-repeat 50% 50%;
   background-size: cover;
-  background-color: #FAF4E6;
   background-position: center;
   height: 100%;
   width: 100%;
@@ -170,110 +194,4 @@ text-decoration: none;
 .name:hover {
 color: #C0D8DB;
 text-decoration: none;
-}
-
-
-
-/* Footer */
-
-.navbar {
-padding: 0rem 00rem;
-flex-wrap: nowrap;
-align-items: center;
-justify-content: center;
-position: absolute;
-bottom: 0px;
-
-}
-.fa-twitter:before {
-color: #48a0ff;
-}
-
-.fa-instagram:before {
-display: inline-block;
-width: 40px;
-height: 40px;
-text-align: center;
-border-radius: 10px;
-color: #fff;
-font-size: 36px;
-line-height: 40px;
-vertical-align: top;
-background: #d6249f;
-background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
-}
-
-.fa-youtube:before {
-color: #dc3545;
-}
-
-
-.fab {
-color: #FAF4E6;
-}
-.navbar-light .navbar-brand {
-color: #FAF4E6;
-}
-.bg-light {
-background-color: #f8f9fa00!important;
-}
-
-
-
-
-
-#close {
-display: none;
-}
-
-#hamburger {
-display: none;
-}
-/* Media Queries */
-
-@media(max-width: 1266px) {
-#hero > #hero-text > h1 {
-font-size: 100px;
-}
-}
-@media(max-width: 980px) {
-#hero > #hero-text > h1 {
-font-size: 75px;
-}
-}
-@media(max-width: 767px) {
-
-/* Mobile Nav */
-
-#hamburger {
-display: inherit;
-}
-
-#hamburger, #close {
-color: #FAF4E6;
-position: absolute;
-top: 0;
-right: 0;
-padding: 20px 25px;
-scale: 1
-z-index: 9999999;
-}
-#close {
-display: none;
-}
-
-.c-navigation #links {
-display: none;
-padding: 0;
-
-}
-
-#hero > #hero-text > h1 {
-font-size: 55px;
-}
-}
-@media(max-width: 546px) {
-#hero > #hero-text > h1 {
-font-size: 43px;
-}
 }
