--- a/css/style-about.css
+++ b/css/style-about.css
@@ -41,19 +41,30 @@ animation: fadein 1s;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center; right: 300px;
+  text-align: center; right: 230px;
   z-index: auto;
 }
-
+img {
+  outline: 0.5rem solid #0c5460;
+  border-radius: 5px;
+  padding: -1rem;
+  outline-offset: -1.1rem;
+  filter: brightness(100%) saturate(80%) contrast(90%) drop-shadow(0px 2px 26px);
+}
 p {
+font-family: 'Pompiere',cursive;
+font-size: 20px;
+color: #0c5460;
+font-weight: bolder;
 z-index: 99999;
 position: relative;
-display: block;
-flex-direction: column;
-align-items: left;
-justify-content: left;
+display: table;
+margin-left: auto;
+margin-right: auto;
 text-align: left;
-z-index: auto;
+width: 430px; /* whatever width you want */
+left: 240px;
+bottom: 113px;
 }
 .text-center {
 text-align: center;
@@ -74,7 +85,7 @@ list-style: none;
   height: 100%;
   width: 100%;
   position: fixed;
-  filter: blur(6px);
+  filter: blur(9px);
   transform: scale(1.1);
   padding-bottom: 100px;
 
