--- a/css/style-index.css
+++ b/css/style-index.css
@@ -18,12 +18,12 @@ animation: fadein 1s;
   text-align: center;
 }
 .animate-in {
-    -webkit-animation: fadeIn .5s ease-in;
-    animation: fadeIn .5s ease-in;
+    -webkit-animation: fadeIn 1s ease-in;
+    animation: fadeIn 1s ease-in;
 }
 .animate-out {
-    -webkit-transition: opacity .5s;
-    transition: opacity .5s;
+    -webkit-transition: opacity 1s;
+    transition: opacity 1s;
     opacity: 0;
 }
 @-webkit-keyframes fadeIn {
