--- a/css/style-portfolio.css
+++ b/css/style-portfolio.css
@@ -14,14 +14,13 @@ animation: fadein 1s;
 -o-animation: fadein 1s; /* Opera */
 }
 
-}
 .animate-in {
-    -webkit-animation: fadeIn .5s ease-in;
-    animation: fadeIn .5s ease-in;
+    -webkit-animation: fadeIn 1s ease-in;
+    animation: fadeIn 1s ease-in;
 }
 .animate-out {
-    -webkit-transition: opacity .5s;
-    transition: opacity .5s;
+    -webkit-transition: opacity 1s;
+    transition: opacity 1s;
     opacity: 0;
 }
 @-webkit-keyframes fadeIn {
