--- a/css/constantstyle.css
+++ b/css/constantstyle.css
@@ -50,14 +50,20 @@ color: #48a0ff;
 }
 /* Media Queries */
 
-@media(max-width: 1266px) {
+@media(max-width: 1366px) {
   #hero > #hero-text > h1 {
-      font-size: 100px;
+      font-size: 80px;
   }
 }
-@media(max-width: 980px) {
+@media(max-width: 1180px) {
   #hero > #hero-text > h1 {
-      font-size: 75px;
+      font-size: 65px;
+  }
+}
+
+@media(max-width: 1000px) {
+  #hero > #hero-text > h1 {
+      font-size: 50px;
   }
 }
 @media(max-width: 767px) {
@@ -88,11 +94,11 @@ color: #48a0ff;
 }
 
   #hero > #hero-text > h1 {
-      font-size: 55px;
+      font-size: 40px;
   }
 }
 @media(max-width: 546px) {
   #hero > #hero-text > h1 {
-      font-size: 43px;
+    font-size: 30px;
   }
 }
