--- a/css/style-about.css
+++ b/css/style-about.css
@@ -14,14 +14,14 @@ animation: fadein 1s;
 -o-animation: fadein 1s; /* Opera */
 }
 
-
+}
 .animate-in {
-    -webkit-animation: fadeIn 1s ease-in;
-    animation: fadeIn 1s ease-in;
+    -webkit-animation: fadeIn .5s ease-in;
+    animation: fadeIn .5s ease-in;
 }
 .animate-out {
-    -webkit-transition: opacity 1s;
-    transition: opacity 1s;
+    -webkit-transition: opacity .5s;
+    transition: opacity .5s;
     opacity: 0;
 }
 @-webkit-keyframes fadeIn {
@@ -44,6 +44,7 @@ animation: fadein 1s;
   text-align: center; right: 230px;
   z-index: auto;
 }
+
 img {
   outline: 0.5rem solid #0c5460;
   border-radius: 5px;
@@ -51,6 +52,7 @@ img {
   outline-offset: -1.1rem;
   filter: brightness(100%) saturate(80%) contrast(90%) drop-shadow(0px 2px 26px);
 }
+
 p {
 font-family: 'Pompiere',cursive;
 font-size: 20px;
