--- a/css/style-portfolio.css
+++ b/css/style-portfolio.css
@@ -180,6 +180,10 @@ list-style: none;
 padding: 50px 70px;
 }
 
+.active {
+    color: #EDC385;
+}
+
 a {
 color: #faf4e7;
 text-decoration: none;
@@ -188,9 +192,13 @@ a:hover {
 color: #EDC385;
 text-decoration: none;
 }
+.YouTube {
+  color: #dc3545;
+  text-decoration: none;
+}
 .YouTube:hover {
-color: #dc3545;
-text-decoration: none;
+  color: #faf4e7;
+  text-decoration: none;
 }
 .name:hover {
 color: #C0D8DB;
